correction scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -300,6 +300,70 @@ p {
   gap: 12rem;
 }
 
+details pre code {
+  display: block;
+  max-height: 300px;
+  overflow: auto;
+  background-color: #1e1e1e;
+  padding: 1rem;
+  border-radius: 8px;
+  color: #fff;
+  font-family: "Courier New", monospace;
+  font-size: 0.81rem;
+  line-height: 1.4;
+}
+
+details summary {
+  cursor: pointer;
+}
+
+details pre code::-webkit-scrollbar {
+  width: 8px;
+}
+
+details pre code::-webkit-scrollbar-track {
+  background: #1e1e1e;
+}
+
+details pre code::-webkit-scrollbar-thumb {
+  background-color: #562e6e;
+  border-radius: 6px;
+  border: 2px solid #1e1e1e;
+}
+
+details pre code::-webkit-scrollbar-thumb:hover {
+  background-color: #7a3ba0;
+}
+
+/* Pour Firefox */
+details pre code {
+  scrollbar-color: #562e6e #fffafa;
+  scrollbar-width: thin;
+}
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background: #0f0f0f;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #562e6e;
+  border-radius: 6px;
+  border: 2px solid #0f0f0f;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #7a3ba0;
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #562e6e #ffffff;
+}
+
 @media (min-width: 50em) {
   .demo-image {
     height: 18rem;
